Quorum/Library/Tests/Actions/Pass/ChainedSoloAction.quorum
class Main 
    action Main
        Test():Test()
        output "passed"
    end

    action Test returns Main
        return me
    end
end