Quorum/Library/Tests/Actions/Fail/MissingUseInParam.quorum
class Main
    action Main
        Test(undefined)
    end

    action Test(Drawable drawable)

    end
end